--- a/components.json
+++ b/components.json
@@ -16,7 +16,8 @@
     "ui": "@/components/ui",
     "lib": "@/lib",
     "hooks": "@/hooks",
-    "types": "@/types"
+    "types": "@/types",
+    "auth": "@/auth"
   },
   "iconLibrary": "lucide"
 }
